<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/fb"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/nama"
        android:drawableRight="@drawable/ic_account_circle_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        />

    <EditText

        android:drawableRight="@drawable/ic_date_range_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tanggal_lahir"
        android:inputType="date"
        android:id="@+id/ttl"
        />

    <EditText
        android:id="@+id/email"
        android:drawableRight="@drawable/ic_email_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:drawableRight="@drawable/ic_lock_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/txtpass"

        />

    <Button
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create"
        android:background="@color/colorSubmit"
        android:id="@+id/btnregister"
        />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member"
        android:textStyle="bold"
        android:autoLink="web"

        />



</LinearLayout>