<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mobile.app.qybae.demo.fragment.AddStudent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/fb"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/namamurid"
        android:drawableRight="@drawable/ic_account_circle_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        />

    <EditText

        android:drawableRight="@drawable/ic_date_range_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tanggal_lahir"
        android:inputType="date"
        android:id="@+id/ttlmurid"
        />

    <EditText
        android:id="@+id/emailmurid"
        android:drawableRight="@drawable/ic_email_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:drawableRight="@drawable/ic_lock_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Alamat Murid"
        android:id="@+id/txtalamatmurid"

        />
    <EditText
        android:drawableRight="@drawable/ic_lock_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Murid"
        android:inputType="phone"
        android:id="@+id/txtphonemurid">

    </EditText>
    <EditText
        android:drawableRight="@drawable/ic_lock_black_24dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="umur Murid"
        android:inputType="number"
        android:id="@+id/txtumurmurid"
        />


    <Button
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create"
        android:background="@color/colorSubmit"
        android:id="@+id/btnregistermurid"
        />

</LinearLayout>
</ScrollView>