<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mobile.app.qybae.demo.Firebase.DetailStudentActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!-- TODO: Update blank fragment layout -->

        <EditText
            android:id="@+id/namamuriddetail"
            android:drawableRight="@drawable/ic_account_circle_black_24dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
             android:enabled="false"/>

        <EditText

            android:drawableRight="@drawable/ic_date_range_black_24dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal_lahir"
            android:inputType="date"
            android:id="@+id/ttlmuriddetail"
            android:enabled="false"
            />

        <EditText
            android:id="@+id/emailmuriddetail"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:enabled="false"
            />

        <EditText
            android:drawableRight="@drawable/ic_lock_black_24dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Alamat Murid"
            android:id="@+id/txtalamatmuriddetail"
            android:enabled="false"
            />
        <EditText
            android:drawableRight="@drawable/ic_lock_black_24dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Murid"
            android:inputType="phone"
            android:id="@+id/txtphonemuriddetail"
            android:enabled="false"
      />
        <EditText
            android:drawableRight="@drawable/ic_lock_black_24dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="umur Murid"
            android:inputType="number"
            android:id="@+id/txtumurmuriddetail"
            android:enabled="false"
            />


        <Button
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="update"
            android:background="@color/colorSubmit"
            android:id="@+id/btnupdatemurid"
            />
        <Button
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Simpan"
            android:visibility="gone"
            android:background="@color/colorSubmit"
            android:id="@+id/btnsimpanmurid"
            />
        <Button
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:background="@color/colorSubmit"
            android:id="@+id/btndelmurid"
            />
    </LinearLayout>

</ScrollView>
