<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_bilangan_a"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:hint="input nilai a"
        android:inputType="number"
        android:maxLength="10" />

    <Button
        android:id="@+id/btn_tambah"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/et_bilangan_a"
        android:layout_marginRight="6dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="buttonTambah"
        android:text="+" />

    <Button
        android:id="@+id/btn_kurang"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/et_bilangan_a"
        android:layout_marginRight="6dp"
        android:layout_toRightOf="@id/btn_tambah"
        android:background="@android:color/holo_green_light"
        android:onClick="buttonKurang"
        android:text="-" />

    <Button
        android:id="@+id/btn_kali"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/et_bilangan_a"
        android:layout_marginRight="6dp"
        android:layout_toRightOf="@id/btn_kurang"
        android:background="@android:color/holo_red_dark"
        android:onClick="buttonKali"
        android:text="*" />

    <Button
        android:id="@+id/btn_bagi"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/et_bilangan_a"
        android:layout_toRightOf="@id/btn_kali"
        android:background="@android:color/darker_gray"
        android:onClick="buttonBagi"
        android:text="/" />

    <TextView
        android:id="@+id/tv_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_bilangan_a"
        android:text="@string/operator"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/et_bilangan_b"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/tv_operator"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:hint="Masukan Bil B"
        android:inputType="number"
        android:maxLength="10" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_bilangan_b"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/sama_dengan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/samadengan"
            android:textSize="30sp" />


        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="0"
            android:textSize="40sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btnhitungcalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/hitung" />
    </RelativeLayout>

</RelativeLayout>